--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: Robbbbbbbbb # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['https://form1engraving.com', 'https://paymap.me/robbstumpf', 'https://venmo.com/robbstumpf']
+github: Robbbbbbbbb
+custom: ['https://form1engraving.com', 'https://paymap.me/robbstumpf', 'https://venmo.com/robbstumpf']
