--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: Robbbbbbbbb
-custom: ['https://form1engraving.com', 'https://paymap.me/robbstumpf', 'https://venmo.com/robbstumpf']
+custom: ['https://form1engraving.com', 'https://paypal.me/robbstumpf', 'https://venmo.com/robbstumpf']
