--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ idna==3.4
 imutils==0.5.4
 numpy==1.24.2
 opencv-python-headless==4.10.0.84
-Pillow==11.1.0
+pillow
 platformdirs==3.1.1
 requests==2.28.2
 requests-cache==1.0.0
